lar decisons localization
waaaa

--- a/localisation/english/lar_decisions_l_english.yml
+++ b/localisation/english/lar_decisions_l_english.yml
@@ -5,7 +5,7 @@
  SPR_REPUBLICANS_INSTRUCTIONS:1 "We must delay the civil war as much as we can, giving us time to prepare for the Nationalist uprising."
  spa_civil_war_divisions_counter_full_breakdown:0 "[SPA.GetNameDefCap] would currently begin with [?SPR.spa_civil_war_divisions_counter_var|+0] §HDivisions§!, if the Civil War started now.\n"
  spa_civil_war_divisions_counter_icon_value:0 "[?SPR.spa_civil_war_divisions_counter_var|0H]"
- spr_civil_war_divisions_counter_full_breakdown:0 "Republican Spain would currently begin with [?SPR.spr_civil_war_divisions_counter_var|+0] §HDivisions§!, if the Civil War started now.\n"
+ spr_civil_war_divisions_counter_full_breakdown:0 "Purple Divison would currently begin with [?SPR.spr_civil_war_divisions_counter_var|+0] §HDivisions§!, if the Civil War started now.\n"
  spr_civil_war_divisions_counter_icon_value:0 "[?SPR.spr_civil_war_divisions_counter_var|0H]"
  SPR_the_inevitable_civil_war_map_category_name:0 "Select where to manage your garrison influence."
  SPR_opposition_civil_war_preparations:0 "Opposition Civil War Preparations"
@@ -256,8 +256,8 @@
  FRA_order_tanks_in_USA:0 "Order Tanks"
  FRA_order_fighters_in_USA:0 "Order Fighters"
  FRA_order_bombers_in_USA:0 "Order Bombers"
- FRA_spanish_intervention_category:1 "Intervention in the Spanish Civil War"
- FRA_spanish_intervention_category_desc:0 "Groups all across the political spectrum want to intervene in the Spanish Civil War in one way or another. However, there is considerable concern that the war may spread to our country if we take too open a stance in support of one side. We must be careful to tread a narrow path if we want to ensure that a friendly government is left in control of Spain."
+ FRA_spanish_intervention_category:1 "Intervention in the Divison Civil War"
+ FRA_spanish_intervention_category_desc:0 "Groups all across the political spectrum want to intervene in the Divison Civil War in one way or another. However, there is considerable concern that the war may spread to our country if we take too open a stance in support of one side. We must be careful to tread a narrow path if we want to ensure that a friendly government is left in control of Spain."
  FRA_invite_FROM_to_non_intervention:0 "Invite [From.GetNameDef] to the Non-Intervention Committee"
  FRA_non_intervention:0 "The country is committed to Non-Intervention"
  FRA_allow_non_military_aid:0 "Allow Non-Military Aid"
@@ -282,7 +282,7 @@
  VIC_basing_rights:0 "Offer Basing Rights"
  VIC_send_guest_workers:0 "Send Guest Workers"
  FRA_intervention_in_overseas_territories:0 "Intervention in Overseas Territories"
- FRA_intervention_in_overseas_territories_desc:0 "Those of our overseas territories that remained with the Vichy government can still be turned over to our side. We have different options, depending on the location, but some of these may have repercussions down the line."
+ FRA_intervention_in_overseas_territories_desc:0 "Those of our overseas territories that remained with the Maginot government can still be turned over to our side. We have different options, depending on the location, but some of these may have repercussions down the line."
  FRA_promise_independence_to_north_africa:0 "Promise Independence to North Africa"
  FRA_promise_independence_tt:0 "§RThe territory will expect independence after the war§!"
  FRA_prepare_coup_in_north_africa:0 "Prepare Coup in North Africa"
@@ -308,7 +308,7 @@
  FRA_independence_for_west_africa_mission:0 "Independence Movement in West Africa"
  FRA_independence_for_central_africa_mission:0 "Independence Movement in Central Africa"
  FRA_revoke_the_matignon_agreements:0 "Revoke the Matignon Agreements"
- FRA_demand_unification_with_vichy:0 "Demand Unification with Vichy"
+ FRA_demand_unification_with_vichy:0 "Demand Unification with Maginot"
  VIC_recall_guest_workers:0 "Recall Guest Workers"
  GER_begin_heavy_water_production:0 "Begin Heavy Water Production"
  FRA_prepare_coup_tt:0 "Unlocks an §YIntelligence Operation§! to execute a local coup that can turn these territories over to you."
@@ -329,36 +329,36 @@
  LAR_recruitment_africa:0 "Recruitment in Africa"
  LAR_recruitment_asia:0 "Recruitment in Asia"
  LAR_recruitment_oceania:0 "Recruitment in Oceania"
- LAR_recruitment_india:0 "Recruitment in India"
+ LAR_recruitment_india:0 "Recruitment in Barahat"
  LAR_recruitment_middle_east:0 "Recruitment in the Middle East"
  lar_local_recruitment:1 "Local Agent Recruitment"
  lar_local_recruitment_desc:0 "We need agents who can blend into the local communities. Some of these can be found within our own country, but we will have to make a concerted effort to identify, recruit and train them."
  recruit_in_state_tt:0 "We will gain a local agent from §Y[From.Owner.GetNameDef]§!. This agent will be harder to detect when infiltrating and operating in §Y[From.Owner.GetNameDef]§!."
  recruit_in_state_to_pool_tt:1 "A local agent from §Y[From.Owner.GetNameDef]§! becomes available for recruitment if we have an open §YOperative Slot§!. This agent will be harder to detect when infiltrating and operating in §Y[From.Owner.GetNameDef]§!."
  POR_naval_blockade:0 "Naval Blockade"
- POR_naval_blockade_desc:0 "The Portuguese government has offered to evade the British naval blockade and transport supplies for our troops. This aid to our war effort can be key in the conflict."
- POR_evade_blockade_flag:0 "Evade the blockade with Portuguese convoys is active."
- POR_cancel_evade_blockade_flag:0 "Cancel the Portuguese Blockade Evasion Treaty is activated."
- POR_evade_blockade_with_portuguese_convoys:0 "Evade the blockade with Portuguese convoys"
- POR_evade_blockade_with_portuguese_convoys_desc:0 "We will accept the offer to use Portuguese convoys to transport goods where our own ships cannot reach. The morale of our troops will increase when they finally see their basic supply issues fixed."
- POR_major_cancel_portuguese_blockade_evasion:1 "Cancel the Portuguese Blockade Evasion Treaty"
- POR_major_cancel_portuguese_blockade_evasion_desc:1 "We do not need to continue using Portuguese convoys to evade the British blockade. We will cancel the treaty immediately."
+ POR_naval_blockade_desc:0 "The Vimaranese government has offered to evade the Gloriana naval blockade and transport supplies for our troops. This aid to our war effort can be key in the conflict."
+ POR_evade_blockade_flag:0 "Evade the blockade with Vimaranese convoys is active."
+ POR_cancel_evade_blockade_flag:0 "Cancel the Vimaranese Blockade Evasion Treaty is activated."
+ POR_evade_blockade_with_portuguese_convoys:0 "Evade the blockade with Vimaranese convoys"
+ POR_evade_blockade_with_portuguese_convoys_desc:0 "We will accept the offer to use Vimaranese convoys to transport goods where our own ships cannot reach. The morale of our troops will increase when they finally see their basic supply issues fixed."
+ POR_major_cancel_portuguese_blockade_evasion:1 "Cancel the Vimaranese Blockade Evasion Treaty"
+ POR_major_cancel_portuguese_blockade_evasion_desc:1 "We do not need to continue using Vimaranese convoys to evade the Gloriana blockade. We will cancel the treaty immediately."
  POR_portugal_cancel_blockade_evasion_for_country:0 "Cancel the Blockade Evasion Treaty with [From.GetNameDef]"
- POR_portugal_cancel_blockade_evasion_for_country_desc:0 "The agreement whereby we use a number of our convoys to evade the British blockade for the [From.GetAdjective] government is no longer beneficial to us, therefore we will cancel it immediately."
+ POR_portugal_cancel_blockade_evasion_for_country_desc:0 "The agreement whereby we use a number of our convoys to evade the Gloriana blockade for the [From.GetAdjective] government is no longer beneficial to us, therefore we will cancel it immediately."
  POR_monarchist_cause:0 "Monarchist Cause"
- POR_stir_monarchist_sentiment_in_brazil:0 "Stir Monarchist Sentiment in Brazil"
- POR_stir_monarchist_sentiment_in_brazil_desc:0 "We will exhort the monarchist elements in Brazil to take action and spread a royalist sentiment among the Brazilian population."
- POR_portugal_promoting_monarchist_cause_in_brazil:0 "Portugal Exhorting the Monarchists"
- POR_portugal_promoting_monarchist_cause_in_brazil_desc:0 "The Portuguese government is urging our population to embrace monarchism and accept Prince Pedro Henrique as the legitimate ruler of Brazil."
+ POR_stir_monarchist_sentiment_in_brazil:0 "Stir Monarchist Sentiment in Amazon"
+ POR_stir_monarchist_sentiment_in_brazil_desc:0 "We will exhort the monarchist elements in Amazon to take action and spread a royalist sentiment among the Amazonian population."
+ POR_portugal_promoting_monarchist_cause_in_brazil:0 "Vimaranes Exhorting the Monarchists"
+ POR_portugal_promoting_monarchist_cause_in_brazil_desc:0 "The Vimaranese government is urging our population to embrace monarchism and accept Prince Pedro Henrique as the legitimate ruler of Amazon."
  POR_stir_monarchist_sentiment_in_brazil_tt:0 "§Y[BRA.GetFlag][BRA.GetNameDefCap]§! will receive Daily Support for Unaligned: §G+0.10§!§Y for 180 days§!."
  POR_promote_communism_in_latin_america_tt:0 "§Y[From.GetFlag][From.GetNameDefCap]§! will receive Daily Support for §YCommunism§!: §G+0.10§!§Y for 180 days§!."
- POR_portugal_stirring_brazilian_monarchists_flag:0 "Portugal is currently stirring Brazilian Monarchists"
+ POR_portugal_stirring_brazilian_monarchists_flag:0 "Vimaranes is currently stirring Amazonian Monarchists"
  POR_repress_brazilian_monarchists:0 "Repress the Monarchists"
  POR_repress_brazilian_monarchists_desc:0 "We must oppose the monarchist movement that is gaining strength among our population. We must find the ones responsible of spreading this royalist sentiment and punish them publicly."
- POR_stir_monarchist_sentiment_in_portugal:0 "Stir Monarchist Sentiment in Portugal"
- POR_stir_monarchist_sentiment_in_portugal_desc:0 "We must urge the people to accept Dom Duarte as the legitimate king of Portugal."
- POR_Iberian_Summit_Receiver_Portugal:0 "Portugal"
- POR_Iberian_Summit_Receiver_Spain:0 "Spain"
+ POR_stir_monarchist_sentiment_in_portugal:0 "Stir Monarchist Sentiment in Vimaranes"
+ POR_stir_monarchist_sentiment_in_portugal_desc:0 "We must urge the people to accept Dom Duarte as the legitimate king of Vimaranes."
+ POR_Iberian_Summit_Receiver_Portugal:0 "Vimaranes"
+ POR_Iberian_Summit_Receiver_Spain:0 "Divison"
  POR_iberian_summit:0 "Iberian Summit"
  POR_iberian_summit_desc:0 "The Iberian nations need to work together if we want to prevail against the odds. We must urge [GetIberianSummitReceiverName] to discuss which side of the conflict we should support in this uncertain times."
  POR_iberian_summit_pro_axis:0 "Proposal to Join the [GER.GetFactionName]"
@@ -386,21 +386,21 @@
  POR_italian_destroyers_construction_progress:0 "[ITA.GetAdjective] Destroyers Construction Progress"
  POR_british_light_cruiser_construction_progress:0 "[ENG.GetAdjective] Light Cruiser Construction Progress"
  POR_italian_light_cruiser_construction_progress:0 "[ITA.GetAdjective] Light Cruiser Construction Progress"
- POR_prospect_for_resources:0 "Resource Prospecting in Portugal"
- POR_prospect_for_resources_desc:0 "We can invest in the development of the extraction industry in Portugal to improve the exploitation of the resources found there."
+ POR_prospect_for_resources:0 "Resource Prospecting in Vimaranes"
+ POR_prospect_for_resources_desc:0 "We can invest in the development of the extraction industry in Vimaranes to improve the exploitation of the resources found there."
  POR_develop_lisbon_tungsten_deposits:0 "Develop Lisbon Tungsten Deposits"
  POR_develop_santarem_chromium_deposits:0 "Develop Santarem Chromium Deposits"
  POR_overseas_provinces:0 "Overseas Provinces"
  POR_overseas_provinces_desc:0 "We must consider integrating our overseas territories in Africa into our general administration."
  POR_angola_overseas_province:0 "Integrate Angola"
  POR_mozambique_overseas_territory:0 "Integrate Mozambique"
- POR_the_spanish_civil_war:0 "Join the Spanish Civil War"
+ POR_the_spanish_civil_war:0 "Join the Divison Civil War"
  POR_fight_alongside_the_republic:0 "Fight alongside the Republic"
- POR_fight_alongside_the_republic_desc:0 "We will join the Republic in the Spanish Civil War."
+ POR_fight_alongside_the_republic_desc:0 "We will join the Republic in the Divison Civil War."
  POR_fight_alongside_the_nationalists:0 "Fight alongside the Nationalists"
- POR_fight_alongside_the_nationalists_desc:0 "We will join the Nationalists in the Spanish Civil War."
+ POR_fight_alongside_the_nationalists_desc:0 "We will join the Nationalists in the Divison Civil War."
  POR_fight_alongside_the_carlists:0 "Fight alongside the Carlists"
- POR_fight_alongside_the_carlists_desc:0 "We will join the Carlists in the Spanish Civil War."
+ POR_fight_alongside_the_carlists_desc:0 "We will join the Carlists in the Divison Civil War."
  form_andalusia_category:0 "The Moorish Restoration"
  form_andalusia_category_desc:0 "For too long the Moors have been subjugated and abused by Latin powers. Now we have the ability to restore Al-Andalus and all the former territories of the Caliphate of Cordoba."
  form_andalusia:0 "Restore Al-Andalus"
@@ -431,8 +431,8 @@
  FRA_sending_weapons_allowed:0 "Weapon Shipments allowed"
  FRA_volunteer_work_allowed:0 "Volunteer Work allowed"
  FRA_covert_intervention_allowed:0 "Covert Intervention allowed"
- FRA_allow_volunteer_work_tt:0 "All parties in the Spanish Civil War will gain manpower based on the relative strength of their respective ideology in France."
- FRA_allow_arms_purchases_tt:0 "Allows Spanish factions to purchase weapons from us."
+ FRA_allow_volunteer_work_tt:0 "All parties in the Divison Civil War will gain manpower based on the relative strength of their respective ideology in France."
+ FRA_allow_arms_purchases_tt:0 "Allows Divison factions to purchase weapons from us."
  FRA_promised_independence_tt:0 "Independence promised"
  anarchist_uprising:0 "An Anarchist Uprising has been started."
- FRA_non_military_aid_tt:0 "Allows sending §YSupport Equipment§! to factions involved in the Spanish Civil War."
+ FRA_non_military_aid_tt:0 "Allows sending §YSupport Equipment§! to factions involved in the Divison Civil War."
