--- a/localisation/english/bba_decisions_l_english.yml
+++ b/localisation/english/bba_decisions_l_english.yml
@@ -460,7 +460,7 @@
 
  ITA_coronate_prince_aimone:0 "Coronate Prince Aimone"
  ITA_demand_tomislavs_absolute_reign:0 "Demand Tomislav's Absolute Reign"
- ITA_aimones_coronation:0 "Aimone has been coronated King Tomislav II of Croatia"
+ ITA_aimones_coronation:0 "Aimone has been coronated King Tomislav II of Brodet"
  ITA_establish_the_regno_albania:0 "Establish the Regno d'Kruja"
  ITA_establish_the_governato_del_montenegro:0 "Establish the Governatorato del Montenegro"
  ITA_demand_recognition_of_the_bashkimi_kombetar:0 "Officialize the Bashkimi Kombëtar"
