Country name local

--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -6,7 +6,7 @@
  COG_subject:0 "$OVERLORDADJ$ Congo"
  MAL_subject:0 "$OVERLORDADJ$ Malaya"
  LBA_subject:0 "$OVERLORDADJ$ North Africa"
- SAU_subject:0 "$OVERLORDADJ$ Central Arabia"
+ SAU_subject:0 "$OVERLORDADJ$ Central Tayaran"
  MAL_UK_democratic:0 "Gloriana Malaya"
  MAL_UK_democratic_DEF:0 "Gloriana Malaya"
  RAJ_UK_democratic:0 "Gloriana Raj"
@@ -468,13 +468,13 @@
  BYZ_UNIFIED_fascism_DEF:0 "the Byzantine Empire"
  BYZ_UNIFIED_democratic_DEF:0 "the East-Roman Republic"
  BYZ_UNIFIED_communism_DEF:0 "the Byzantine Commune"
- ARA_UNIFIED_neutrality:0 "Arabia"
- ARA_UNIFIED_fascism:0 "Arabian Empire"
- ARA_UNIFIED_democratic:0 "Arabian Federation"
+ ARA_UNIFIED_neutrality:0 "Tayaran"
+ ARA_UNIFIED_fascism:0 "Tayaran Empire"
+ ARA_UNIFIED_democratic:0 "Tayaran Federation"
  ARA_UNIFIED_communism:0 "United Arab Socialist Republics"
- ARA_UNIFIED_neutrality_DEF:0 "Arabia"
- ARA_UNIFIED_fascism_DEF:0 "the Arabian Empire"
- ARA_UNIFIED_democratic_DEF:0 "the Arabian Federation"
+ ARA_UNIFIED_neutrality_DEF:0 "Tayaran"
+ ARA_UNIFIED_fascism_DEF:0 "the Tayaran Empire"
+ ARA_UNIFIED_democratic_DEF:0 "the Tayaran Federation"
  ARA_UNIFIED_communism_DEF:0 "the United Arab Socialist Republics"
  MAJ_UNIFIED_neutrality:0 "Majapahit Thalassocracy"
  MAJ_UNIFIED_fascism:0 "Majapahit Empire"
@@ -834,7 +834,7 @@
  KPB_kingdom_portugal_and_brazil_communism_adj:0 "Porto-Amazonian"
  KPB_kingdom_portugal_and_brazil_democratic:0 "United Republics of vimaranes and Amazon"
  KPB_kingdom_portugal_and_brazil_democratic_def:0 "the Republic of vimaranes and Amazon"
- KPB_kingdom_portugal_and_brazil_democratic_adj:0 "Porto-Brazilian"
+ KPB_kingdom_portugal_and_brazil_democratic_adj:0 "Porto-Amazonian"
  KPB_kingdom_portugal_and_brazil:0 "Porto-Amazon"
  KPB_kingdom_portugal_and_brazil_def:0 "Porto-amazon"
  KPB_kingdom_portugal_and_brazil_adj:0 "Porto-amazon"
@@ -852,10 +852,10 @@
  ESU_POR_unified_adj:0 "Iberian"
  POR_empire_neutrality:0 "Fifth vimaranes Empire"
  POR_empire_neutrality_def:0 "the Fifth vimaranes Empire"
- POR_empire_neutrality_adj:0 "Portuguese"
+ POR_empire_neutrality_adj:0 "Vimaranes"
  POR_empire_fascism:0 "Fifth vimaranes Empire"
  POR_empire_fascism_def:0 "the Fifth vimaranes Empire"
- POR_empire_fascism_adj:0 "Portuguese"
+ POR_empire_fascism_adj:0 "Vimaranes"
  HOL_autonomy_collaboration_government_DEF:0 "the $OVERLORDADJ$ $NONIDEOLOGY$"
  PHI_autonomy_collaboration_government_DEF:0 "the $OVERLORDADJ$ $NONIDEOLOGY$"
  BAH_autonomy_collaboration_government_DEF:0 "the $OVERLORDADJ$ $NONIDEOLOGY$"
@@ -1717,41 +1717,41 @@ SWE_greater_nordic_reich_ADJ: "Swedish"
  CHL_new_fatherland_fascism_DEF: "Patria Vieja"
  CHL_new_fatherland_fascism_ADJ: "Chilean"
 
- BRA_const_kingdom_neutrality: "Kingdom of Brazil"
- BRA_const_kingdom_neutrality_DEF: "the Kingdom of Brazil"
- BRA_const_kingdom_neutrality_ADJ: "Brazilian"
- BRA_const_kingdom_democratic: "Kingdom of Brazil"
- BRA_const_kingdom_democratic_DEF: "the Kingdom of Brazil"
- BRA_const_kingdom_democratic_ADJ: "Brazilian"
+ BRA_const_kingdom_neutrality: "Kingdom of Amazon"
+ BRA_const_kingdom_neutrality_DEF: "the Kingdom of Amazon"
+ BRA_const_kingdom_neutrality_ADJ: "Amazonian"
+ BRA_const_kingdom_democratic: "Kingdom of Amazon"
+ BRA_const_kingdom_democratic_DEF: "the Kingdom of Amazon"
+ BRA_const_kingdom_democratic_ADJ: "Amazonian"
 
- POR_const_kingdom_neutrality: "Kingdom of Portugal"
- POR_const_kingdom_neutrality_DEF: "the Kingdom of Portugal"
+ POR_const_kingdom_neutrality: "Kingdom of Vimaranes"
+ POR_const_kingdom_neutrality_DEF: "the Kingdom of Vimaranes"
  POR_const_kingdom_neutrality_ADJ: "Portuguese"
- POR_const_kingdom_democratic: "Kingdom of Portugal"
- POR_const_kingdom_democratic_DEF: "the Kingdom of Portugal"
+ POR_const_kingdom_democratic: "Kingdom of Vimaranes"
+ POR_const_kingdom_democratic_DEF: "the Kingdom of Vimaranes"
  POR_const_kingdom_democratic_ADJ: "Portuguese"
 
- BRA_uk_POR_neutrality: "United Kingdoms of Brazil and Portugal"
- BRA_uk_POR_neutrality_DEF: "the United Kingdoms of Brazil and Portugal"
- BRA_uk_POR_neutrality_ADJ: "Brazilian"
- BRA_uk_POR_democratic: "United Kingdoms of Brazil and Portugal"
- BRA_uk_POR_democratic_DEF: "the United Kingdoms of Brazil and Portugal"
- BRA_uk_POR_democratic_ADJ: "Brazilian"
+ BRA_uk_POR_neutrality: "United Kingdoms of Amazon and Vimaranes"
+ BRA_uk_POR_neutrality_DEF: "the United Kingdoms of Amazon and Vimaranes"
+ BRA_uk_POR_neutrality_ADJ: "Amazonian"
+ BRA_uk_POR_democratic: "United Kingdoms of Amazon and Vimaranes"
+ BRA_uk_POR_democratic_DEF: "the United Kingdoms of Amazon and Vimaranes"
+ BRA_uk_POR_democratic_ADJ: "Amazonian"
 
- BRA_empire_of_brazil_neutrality: "Empire of Brazil"
- BRA_empire_of_brazil_neutrality_DEF: "the Empire of Brazil"
- BRA_empire_of_brazil_neutrality_ADJ: "Brazilian"
- BRA_empire_of_brazil_democratic: "Empire of Brazil"
- BRA_empire_of_brazil_democratic_DEF: "the Empire of Brazil"
- BRA_empire_of_brazil_democratic_ADJ: "Brazilian"
+ BRA_empire_of_brazil_neutrality: "Empire of Amazon"
+ BRA_empire_of_brazil_neutrality_DEF: "the Empire of Amazon"
+ BRA_empire_of_brazil_neutrality_ADJ: "Amazonian"
+ BRA_empire_of_brazil_democratic: "Empire of Amazon"
+ BRA_empire_of_brazil_democratic_DEF: "the Empire of Amazon"
+ BRA_empire_of_brazil_democratic_ADJ: "Amazonian"
 
- BRA_empire_of_brazil_and_portugal_neutrality: "Empire of Brazil and Portugal"
- BRA_empire_of_brazil_and_portugal_neutrality_DEF: "the Empire of Brazil and Portugal"
- BRA_empire_of_brazil_and_portugal_neutrality_ADJ: "Brazilian"
+ BRA_empire_of_brazil_and_portugal_neutrality: "Empire of Amazon and Vimaranes"
+ BRA_empire_of_brazil_and_portugal_neutrality_DEF: "the Empire of Amazon and Vimaranes"
+ BRA_empire_of_brazil_and_portugal_neutrality_ADJ: "Amazonian"
 
- BRA_united_states_of_brazil_cos_tag_democratic: "United States of Brazil"
- BRA_united_states_of_brazil_cos_tag_democratic_def: "the United States of Brazil"
- BRA_united_states_of_brazil_cos_tag_democratic_ADJ: "Brazilian"
+ BRA_united_states_of_brazil_cos_tag_democratic: "United States of Amazon"
+ BRA_united_states_of_brazil_cos_tag_democratic_def: "the United States of Amazon"
+ BRA_united_states_of_brazil_cos_tag_democratic_ADJ: "Amazonian"
 
  BRA_united_states_of_south_america_cos_tag_democratic: "United States of South America"
  BRA_united_states_of_south_america_cos_tag_democratic_def: "the United States of South America"
@@ -1766,9 +1766,9 @@ SWE_greater_nordic_reich_ADJ: "Swedish"
  BRA_united_states_of_south_america_cos_tag_neutrality_def: "the South American Empire"
  BRA_united_states_of_south_america_cos_tag_neutrality_ADJ: "South American"
 
- BRA_third_republic_democratic: "Third Republic of Brazil"
- BRA_third_republic_democratic_def: "the Third Republic of Brazil"
- BRA_third_republic_democratic_ADJ: "Brazilian"
+ BRA_third_republic_democratic: "Third Republic of Amazon"
+ BRA_third_republic_democratic_def: "the Third Republic of Amazon"
+ BRA_third_republic_democratic_ADJ: "Amazonian"
 
  BRA_union_of_latin_american_socialist_republics_cos_tag: "Union of Latin American Socialist Republics"
  BRA_union_of_latin_american_socialist_republics_cos_tag_def: "the Union of Latin American Socialist Republics"
