rip amogus anchovy

--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -1163,7 +1163,7 @@
 
  QUE_communism_party: "Parti Communiste Québécois"
  QUE_democratic_party: "Parti Radical"
- QUE_fascism_party: "Mouvemente Nacionale"
+ QUE_fascism_party: "Mouvement National"
  QUE_neutrality_party: "Mouvement Québécois"
 
  BRA_military_party: "Military"
