--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -594,7 +594,7 @@ VICTORY_POINTS_9206_SWE: "Viborg"
  VICTORY_POINTS_10007:1 "Rhodes"
  VICTORY_POINTS_10007_ITA:0 "Rodi"
  VICTORY_POINTS_10201:0 "Trincomalee"
- VICTORY_POINTS_10367:0 "Attu Island"
+ VICTORY_POINTS_13067: "Attu"
  VICTORY_POINTS_10862:0 "Accra"
  VICTORY_POINTS_11064:0 "Scapa Flow"
  VICTORY_POINTS_271:0 "Norwich"
@@ -1271,7 +1271,10 @@ VICTORY_POINTS_9206_SWE: "Viborg"
  VICTORY_POINTS_12702: "Dammam"
  VICTORY_POINTS_12930: "Sucre"
  VICTORY_POINTS_12505: "St. John's"
- VICTORY_POINTS_4285: "Moncton"
+ VICTORY_POINTS_4285: "Saint John"
+ VICTORY_POINTS_1424: "Moncton"
+ VICTORY_POINTS_10230: "Sherbrooke"
+ VICTORY_POINTS_12223: "Saguenay"
  VICTORY_POINTS_4739: "Saskatoon"
  VICTORY_POINTS_7259: "Victoria"
  VICTORY_POINTS_7899: "Thunder Bay"
