--- a/localisation/english/wtt_ideas_l_english.yml
+++ b/localisation/english/wtt_ideas_l_english.yml
@@ -51,6 +51,8 @@
  CHI_alexander_von_falkenhausen:0 "Alexander von Falkenhausen"
  falkenhausen_recalled:0 "Von Falkenhausen Recalled"
  joseph_stilwell_sent_to_china:0 "Joseph Stilwell sent to China"
+ dwight_d_eisenhower_sent_to_china: "Dwight D. Eisenhower sent to China"
+ douglas_macarthur_sent_to_china: "Douglas MacArthur sent to China"
  JAP_zaibatsus:0 "Zaibatsus"
  JAP_zaibatsus_empowered:0 "Zaibatsus Empowered"
  JAP_zaibatsus_challenged:0 "Zaibatsus Challenged"
