--- a/localisation/english/lar_events_l_english.yml
+++ b/localisation/english/lar_events_l_english.yml
@@ -1028,4 +1028,9 @@
  LaR_france_vichy_notification_events.10.t:0 "Pro-[FRA.GetLeader] coup in West Africa"
  LaR_france_vichy_notification_events.11.t:0 "Pro-[FRA.GetLeader] coup in North Africa"
  LaR_france_vichy_notification_events.12.t:0 "Pro-[FRA.GetLeader] coup in Madagascar"
+
+ lar_spain.100.t: "Unification of the Hispanics!"
+ lar_spain.100.d: "As of today, [SPR.GetLeader] has announced the unification of all Hispanic people under the banner of [SPR.GetNameDef]. They have stated that their goal is protect all bring the Hispanic people to prosperity, and to ensure that the Empire stands for another thousand years, further stating that their national mission has not yet come to an end."
+ lar_spain.100.a: "They will crumble once more"
+ lar_spain.100.b: "We are once more a world power!"
  
