--- a/localisation/english/nsb_characters_l_english.yml
+++ b/localisation/english/nsb_characters_l_english.yml
@@ -251,6 +251,7 @@
  SPR_gonzalo_queipo_de_llano:0 "Gonzalo Queipo de Llano"
  SPR_jose_millan_astray:0 "José Millán Astray"
  SPR_miguel_buiza_fernandez_palacios:0 "Miguel Buiza Fernández-Palacios"
+ SPR_manuel_azana: "Manuel Azaña"
 
  #PORTUGAL
  POR_antonio_de_oliveira_salazar:0 "António de Oliveira Salazar"
