--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -173,7 +173,7 @@
  POL_POS_party_long:0 "Powszechna Organizacja Społeczeństwa" #Common Organization of Society
  POL_exile_democratic_party:0 "PLD"
  POL_exile_democratic_party_long:0 "Partia Liberalno-Demokratyczna"
- AUS_communism_party:0 
+ AUS_communism_party:0 "Miho"
  AUS_communism_party_long:0 "Commander Miho"
  AUS_democratic_party:0 "Miho"
  AUS_democratic_party_long:0 "Commander Miho"
