Loading tips english

--- a/localisation/english/loading_tips_l_english.yml
+++ b/localisation/english/loading_tips_l_english.yml
@@ -81,5 +81,36 @@
  LOADING_TIP_79:0 "In the crucible of battle, the bonds we forge become the unbreakable chains that link us together, propelling us toward the horizon of victory.\n- Miho Nishizumi"
  LOADING_TIP_80:0 "In the heat of battle, it's not just about winning or losing. It's about leading with your heart, embracing the unexpected, and forging bonds that withstand the toughest challenges. \n- Miho Nishizumi"
  LOADING_TIP_81:0 "Why should i have to bow to anyone? \n- Marie"
- LOADING_TIP_82:0 "Chihatan is full of charging idiots, so we should find a place advantageous to us and ambush them \n- Literal koala"
- 
+ LOADING_TIP_83:0 "Chihatan is full of charging idiots, so we should find a place advantageous to us and ambush them \n- Literal koala"
+ LOADING_TIP_84:0 "Stop the repeat, stop the repeat \n- oroari team"
+ LOADING_TIP_85:0 "Jaki chan \n- yukari"
+ LOADING_TIP_86:0 "Are you sure I’m ready to be commander \n- Erika"
+ LOADING_TIP_87:0 "Listen all heaven has shone down upon us, we are going to make them all admit that Anzio is not weak, no I mean that Anzio is strong. \n- Anchovy"
+ LOADING_TIP_88:0 "I smell curry. Let’s eat. \n- Maho."
+ LOADING_TIP_89:0 "I transferred here because, I heard this place didn't have tankwondo. \n- Miho Nishizumi"
+ LOADING_TIP_90:0 "It'll take some strategy and skill. \n- Miho Nishizumi"
+ LOADING_TIP_91:0 "Oh, right. \n- Miho Nishizumi"
+ LOADING_TIP_92:0 "I'm in a strange situation right now. \n- Saori Takebe"
+ LOADING_TIP_93:0 "I won't know what to do if even. more guys start coming after me! \n- Saori Takebe"
+ LOADING_TIP_94:0 "Oh, I know! You're in a love triangle with a member of the student council. \n- Saori Takebe"
+ LOADING_TIP_95:0 "This is just a mass of rusted iron. \n- Saori Takebe"
+ LOADING_TIP_96:0 "Be elegant at all times. \n- Darjeeling"
+ LOADING_TIP_97:0 "With sandwiches, you know, the cucumber inside is a lot better than the bread. \n- Darjeeling"
+ LOADING_TIP_98:0 "Can’t handle the elegance. \n- Darjeeling"
+ LOADING_TIP_99:0 "An Englishwoman abandons her morals in love and war. \n- Darjeeling."
+ LOADING_TIP_100:0 "Our enemy is some minor power. I’ve never heard of before. \n- Katyusha"
+ LOADING_TIP_101:0 "Shizuka-hime, it’s getting pretty humid, it’ll probably start to rain. \n- Rin Matsukaze"
+ LOADING_TIP_102:0 "Could I ask you to wait a moment? \n- Darjeeling said calmly."
+ LOADING_TIP_103:0 "Operation butt naked! \n- Someone lewd."
+ LOADING_TIP_104:0 "Come on!!! \n- Alisa."
+ LOADING_TIP_105:0 "I’ll have a cola \n- Kay"
+ LOADING_TIP_106:0 "Why does tachashi like her, why doesn’t he realize how I feel. \n- Alisa"
+ LOADING_TIP_107:0 "Our school is on a different than yours, FIRE! \n- Alisa"
+ LOADING_TIP_108:0 "It seems like this will end without me getting a second serving of tea. \n- Darjeeling"
+ LOADING_TIP_109:0 "I’ll pass through zombies tonight! \n- Katyusha"
+ LOADING_TIP_110:0 "No matter how I run the simulations …..This can only result in both of our deaths. Huh? Nonna speaking to. \n- Katyusha."
+ LOADING_TIP_111:0 "We each get half. Fine by me. \n- Ruka and Rena sharing Marie."
+ LOADING_TIP_112:0 "Merry Christmas. \n- Kay and Naomi say calmly."
+ LOADING_TIP_113:0 "Well mine’s….\n- Pepperoni with a pointy knife"
+ LOADING_TIP_114:0 "Beef or chicken!!! \n- Masked girls."
+
